--- a/.github/workflows/automatic_testing.yml
+++ b/.github/workflows/automatic_testing.yml
@@ -16,9 +16,10 @@ jobs:
         with:
           go-version: '1.16.x'
       - name: Install dependencies
-        run: cd cmd
-        run: go get .
-        run: cd ..
+        run: |
+          cd cmd
+          go get .
+          cd ..
       - name: Build
         run: go build -v ./...
       - name: Test with the Go CLI
