--- a/.github/workflows/automatic_testing.yml
+++ b/.github/workflows/automatic_testing.yml
@@ -16,10 +16,7 @@ jobs:
         with:
           go-version: '1.16.x'
       - name: Install dependencies
-        run: |
-          cd cmd
-          go get .
-          cd ..
+        run: go get ./...
       - name: Build
         run: go build -v ./...
       - name: Test with the Go CLI
