--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,10 @@
 version: "1.0"
-services:
+services: #only for dev
   app:
     build: .
     ports:
       - "8080:8080"
+  mongo:
+    image: mongo
+    ports:
+      - "27017:27017"
