--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,3 +8,7 @@ services: #only for dev
     image: mongo
     ports:
       - "27017:27017"
+  test_mongo:
+    image: mongo
+    ports:
+      - "27017:27017"
